  * meta: Run in scan mode again (more intelligently) and re-add support for
    meta link.
  * Fix support for the case where metadata appears after an inline directive
    that needs to use it. This was broken in version 2.16.
  * template: Remove bogus htmlize pass added in 2.16.
  * template: Htmlize template variables, but also provide a raw version
    via `<TMPL_VAR raw_variable>`.

 -- Joey Hess <joeyh@debian.org>  Wed, 09 Jan 2008 00:34:46 -0500

ikiwiki (2.19) unstable; urgency=low

  * Only try postsignin if no other action matched. Fixes a bug where the
    user goes back from the signin screen and does something else.
  * Improve behavior when trying to sign in with no cookies.
  * Improved the canedit hook interface, allowing a callback function to be
    returned (and not run in some cases) rather than the plugins directly
    forcing a user to log in.
  * opendiscussion: allow editing of the toplevel discussion page,
    and, indirectly, allow creating new discussion pages.
  * Add a prereq on Data::Dumper 2.11 or better, needed to dump q// objects.
  * htmlscrubber: Further work around #365971 by adding tags for 'br/', 'hr/'
    and 'p/'.
  * aggregate: Include copyright statements from rss feed as meta copyright
    directives.
  * aggregate: Yet another state saving fix (sigh).
  * aggregate: Add hack to support feeds with invalidly escaped html entities.

 -- Joey Hess <joeyh@debian.org>  Tue, 08 Jan 2008 20:43:18 -0500

ikiwiki (2.18) unstable; urgency=low

  * Split error messages for failures to drop real uid and gid.
  * Retry dropping uid and gid, possibly this will help with the "Resource
    temporarily unavailable" failures I've experienced under xen.
  * Stop testing Encode::is_utf8 in decode_form_utf8: That doesn't work.
  * decode_form_utf8 only fixed the utf-8 encoding for fields that were
    registered at the time it was called, which was before the
    formbuilder_setup hook. Fields added by the hook didn't get decoded.